Fixes font selection on Firefox and bumps dependencies

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,7 +2,7 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, "Ovo", serif !default;
+$base-font-family: "Ovo", -apple-system, serif !default;
 $base-font-family-code: "Fira Code", monospace;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
